--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -79,20 +79,52 @@ h1 {
   background: #f2ae00;
 }
 
-.display {
-  position: relative;
+.display-wrapper {
   box-sizing: border-box;
+  border: 2rem solid #f2ae00;
+  box-shadow:0 0 0 10rem #f2ae00;
+  border-radius: 6rem;
+  height: 100%;
+  height: 100%;
+
+  //::after {
+  //  content: '';
+  //  border: 2rem solid #f2ae00;
+  //  position: fixed;
+  //  top: 0;
+  //  left: 0;
+  //  height: inherit;
+  //  width: inherit;
+  //}
+}
+
+.display {
+  box-sizing: border-box;
+  position: relative;
   border: 2rem solid #23252d;
+  border-radius: 4rem;
   border-bottom: 4rem solid #23252d;
   height: 100%;
   pointer-events: none;
+
+  &::before {
+    content:'';
+    display:block;
+    position:absolute;
+    top:calc(100% + 2rem);
+    left:5px;
+    width:calc(100% - 10px);
+    height: 3rem;
+    border-radius:50%;
+    background-color:#23252d;
+  }
 
   .header {
     position: absolute;
     width: 100%;
     display: flex;
     justify-content: center;
-    bottom: -3.25rem;
+    bottom: -3.6rem;
 
     svg {
       display: block;
@@ -105,8 +137,9 @@ h1 {
 button {
     margin: 0.5rem;
 
+    padding: 0;
     position: relative;
-    font-size: 2.5rem;
+    font-size: 4rem;
     line-height: 7rem;
     width: 7rem;
     height: 7rem;
@@ -123,7 +156,7 @@ button {
 
     &:active > span{
       display: block;
-      transform: translateY(1px);
+      transform: translateY(5px);
     }
 
     &:active {
