--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -5,6 +5,15 @@ body {
   text-align: center;
 }
 
+canvas {
+   width: 100%;
+   height: 100%;
+   image-rendering: -moz-crisp-edges;
+   image-rendering: -webkit-crisp-edges;
+   image-rendering: pixelated;
+   image-rendering: crisp-edges;
+ }
+
 h1 {
   position: absolute;
   width: 100%;
