--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,16 +3,15 @@ body {
   overflow: hidden;
   color: white;
   text-align: center;
+
 }
 
-canvas {
-   width: 100%;
-   height: 100%;
-   image-rendering: -moz-crisp-edges;
-   image-rendering: -webkit-crisp-edges;
-   image-rendering: pixelated;
-   image-rendering: crisp-edges;
- }
+.sepia {
+  -webkit-filter: sepia(20%);
+  -moz-filter: sepia(20%);
+  -ms-filter: sepia(20%);
+  filter: sepia(20%)
+}
 
 h1 {
   position: absolute;
@@ -71,7 +70,7 @@ h1 {
   flex-direction: column;
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: 100vh; //fallback
   height: calc(var(--vh, 1vh) * 100);
   pointer-events: none;
 }
@@ -93,7 +92,6 @@ h1 {
   border: 2rem solid #f2ae00;
   box-shadow:0 0 0 10rem #f2ae00;
   border-radius: 6rem;
-  height: 100%;
   height: 100%;
 
   //::after {
@@ -170,7 +168,7 @@ button {
 
     &:active {
       box-shadow: -0.125rem 0.125rem 0.125rem black, 0px 0px 0.75rem black inset;
-      border-width: 0px;
+      border-width: 0;
 
     }
 
