--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,20 @@
+
+:root {
+  --gameboyColor: #f2ae00;
+  --gameboyMaxWidth: 768px;
+}
+
+html {
+  background: bisque;
+}
+
 body {
   margin: 0;
   overflow: hidden;
   color: white;
   text-align: center;
-
+  box-sizing: border-box;
+  background: transparent;
 }
 
 .sepia {
@@ -38,12 +49,12 @@ h1 {
   font-size: 6.2rem;
 }
 
-.popup{
+.popup {
   cursor: pointer;
   position: fixed;
   top: 1rem;
   right: 1rem;
-  background: #FBCA1F;
+  background: var(--gameboyColor);
   font-family: Roboto, sans-serif;
   color: #000;
   padding: 0.6em 1.3em;
@@ -66,13 +77,19 @@ h1 {
 
 
 .gameboy {
+  z-index: 10;
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100vw;
-  height: 100vh; //fallback
+  width: 100%;
+  max-width: 768px;
+  margin-right: auto;
+  margin-left: auto;
+  height: 100%; //fallback
   height: calc(var(--vh, 1vh) * 100);
   pointer-events: none;
+  overflow: hidden;
+
 }
 
 .controls {
@@ -84,19 +101,151 @@ h1 {
   justify-content: space-between;
   pointer-events: auto;
 
-  background: #f2ae00;
+  background: var(--gameboyColor);
+}
+
+.dpad {
+  background: transparent;
+  position: relative;
+  display: inline-block;
+  width: 10rem;
+  height: 10rem;
+  z-index: 5;
+  font-size: 3rem;
+  line-height: 7rem;
+
+  > * {
+    width: 33%;
+    height: 33%;
+    position: absolute;
+    background-color: #565e6a;
+    cursor: pointer;
+
+    i {
+      position: relative;
+      display: block;
+      margin: 0 auto;
+      text-align: center;
+      height: 100%;
+      color: #333a4a;
+      text-shadow: 0px -0.5px 0px #aaa;
+    }
+  }
+
+  .up {
+    top: calc(0% + 4px);
+    left: 33%;
+    border-top: 4px solid black;
+    border-left: 4px solid black;
+    border-right: 4px solid black;
+    border-radius: 5px 5px 0px 0px;
+
+    &:active {
+      background: linear-gradient(to top, #565e6a 0%, #333 100%);
+    }
+
+    i {
+      top: -5px;
+    }
+  }
+
+  .right {
+    top: 33%;
+    left: calc(66% - 4px);
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
+    border-right: 4px solid black;
+    border-radius: 0px 5px 5px 0px;
+    box-shadow: 0px -2px 0px #888 inset;
+
+    &:active {
+      background: linear-gradient(to right, #565e6a 0%, #333 100%);
+    }
+
+    i {
+      top: -5px;
+    }
+  }
+
+  .down {
+    top: calc(66% - 4px);
+    left: 33%;
+    border-left: 4px solid black;
+    border-bottom: 4px solid black;
+    border-right: 4px solid black;
+    border-radius: 0px 0px 5px 5px;
+    box-shadow: 0px -2px 0px #888 inset;
+
+    &:active {
+      background: linear-gradient(to bottom, #565e6a 0%, #333 100%);
+    }
+  }
+
+  .left {
+    top: 33%;
+    left: calc(0% + 4px);
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
+    border-left: 4px solid black;
+    border-radius: 5px 0px 0px 5px;
+    box-shadow: 0px -2px 0px #888 inset;
+
+    i {
+      top: -5px;
+    }
+
+    &:active {
+      background: linear-gradient(to left, #565e6a 0%, #333 100%);
+    }
+  }
+
+  .middle {
+    top: 33%;
+    left: 33%;
+    z-index: -5;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 20%;
+      left: 20%;
+      display: inline-block;
+      border: 1px solid #6e737a;
+      background: linear-gradient(to bottom, #6d7075 0%, #6d7075 30%, #23272f 70%, #23272f 100%);
+      border-radius: 50%;
+      height: 60%;
+      width: 60%;
+    }
+  }
+
+  .up-down {
+    background-color: #565e6a;
+    border: 4px solid black;
+    border-radius: 5px;
+    width: 20px;
+    height: 60px;
+  }
+
+  .left-right {
+    background-color: #565e6a;
+    border: 4px solid black;
+    border-radius: 5px;
+    width: 60px;
+    height: 20px;
+  }
 }
 
 .display-wrapper {
+  overflow: hidden;
   box-sizing: border-box;
-  border: 2rem solid #f2ae00;
-  box-shadow:0 0 0 10rem #f2ae00;
+  border: 2rem solid var(--gameboyColor);
+  box-shadow: 0 0 0 10rem var(--gameboyColor);
   border-radius: 6rem;
   height: 100%;
 
   //::after {
   //  content: '';
-  //  border: 2rem solid #f2ae00;
+  //  border: 2rem solid var(--gameboyColor;
   //  position: fixed;
   //  top: 0;
   //  left: 0;
@@ -113,17 +262,18 @@ h1 {
   border-bottom: 4rem solid #23252d;
   height: 100%;
   pointer-events: none;
+  overflow: hidden;
 
   &::before {
-    content:'';
-    display:block;
-    position:absolute;
-    top:calc(100% + 2rem);
-    left:5px;
-    width:calc(100% - 10px);
+    content: '';
+    display: block;
+    position: absolute;
+    top: calc(100% + 2rem);
+    left: 5px;
+    width: calc(100% - 10px);
     height: 3rem;
-    border-radius:50%;
-    background-color:#23252d;
+    border-radius: 50%;
+    background-color: #23252d;
   }
 
   .header {
@@ -141,15 +291,21 @@ h1 {
 }
 
 
-button {
+.a-b {
+  margin-top: auto;
+  margin-bottom: auto;
+  display: flex;
+  font-family: sans-serif;
+
+  .a, .b {
     margin: 0.5rem;
 
     padding: 0;
     position: relative;
-    font-size: 4rem;
-    line-height: 7rem;
-    width: 7rem;
-    height: 7rem;
+    font-size: 3rem;
+    line-height: 5rem;
+    width: 5rem;
+    height: 5rem;
     border-radius: 50%;
     background-color: #2c313e;
     border: 0;
@@ -161,9 +317,9 @@ button {
     -webkit-user-select: none;
     cursor: pointer;
 
-    &:active > span{
+    &:active > span {
       display: block;
-      transform: translateY(5px);
+      transform: translateY(3px);
     }
 
     &:active {
@@ -171,5 +327,26 @@ button {
       border-width: 0;
 
     }
+  }
 
+  .a {
+    top: -15px;
+  }
+
+  .b {
+    margin-right: 1rem;
+    top: 15px;
+  }
+}
+
+.gameboy-wrapper {
+  background: transparent;
+}
+
+
+.gameboy-left-margin, .gameboy-right-margin {
+  height: 100vh;
+  width: calc((100vw - var(--gameboyMaxWidth)) / 2);
+  background: #2c313e;
+  margin: 0;
 }
