--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -72,9 +72,9 @@ h1 {
   background: var(--gameboyColor);
   font-family: Roboto, sans-serif;
   color: #000;
-  padding: 0.6em 1.3em;
+  padding: 1rem 1.6rem;
   font-weight: 900;
-  font-size: 2rem;
+  font-size: 1.3rem;
   border: 3px solid black;
   border-radius: 0.4em;
   box-shadow: 0.1em 0.1em;
@@ -369,5 +369,12 @@ h1 {
   .b {
     margin-right: 1rem;
     top: 15px;
+  }
+}
+
+@media only screen and (min-width: 768px){
+  .controls {
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 }
