--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -115,7 +115,44 @@ h1 {
   }
 }
 
+.help-menu {
+  width: 100%;
+  height: 100%;
+  font-family: monospace, sans-serif;
+  background: rgba(230, 230, 230, 0.95);
+  font-size: 1rem;
+  display: block;
+  position: absolute;
+  top:0;
+  left: 0;
+  z-index: 2;
+  color: #0b0a1c;
+  overflow: scroll;
+  pointer-events: auto;
+
+  .title {
+    margin: 0;
+    padding: 0.5rem 1rem;
+    font-size: 3rem;
+    text-transform: uppercase;
+    border-bottom: 1px solid black;
+  }
+
+  .content{
+
+    h3 {
+      margin-top: 2em !important;
+    }
+
+    span {
+      margin-top: 4rem;
+      font-size: 0.5rem;
+    }
+  }
+}
+
 .gameboy {
+  background: var(--gameboyColor);
   transition: 0.1s;
   z-index: 2;
   display: flex;
@@ -144,7 +181,6 @@ h1 {
   justify-content: space-between;
   pointer-events: auto;
 
-  background: var(--gameboyColor);
 }
 
 .dpad {
@@ -281,7 +317,6 @@ h1 {
   transition: 0.1s;
   z-index: 2;
   box-sizing: border-box;
-  background: var(--gameboyColor);
   padding: var(--displayMargin);
   box-shadow: 0 0 0 10rem var(--gameboyColor);
   border-radius: 6rem;
@@ -361,6 +396,46 @@ h1 {
     top: 15px;
   }
 }
+
+.start-select {
+  width:100%;
+  display:flex;
+  justify-content:center;
+  padding: 0;
+  align-items: center;
+  font-family: sans-serif;
+  pointer-events: auto;
+
+  .select, .start {
+    display:inline-block;
+    color: #2c313e;
+    text-shadow:0px -1px 0px #2c313e;
+    letter-spacing:-1px;
+    width:4rem;
+    font-size:16px;
+    text-align:center;
+    margin: 1rem 0 1rem 0;
+
+    &::before {
+      content:'';
+      display:block;
+      margin:0 auto;
+      width: 2.5rem;
+      height: 10px;
+      margin-bottom:5px;
+      border-radius:40%;
+      background:linear-gradient(to bottom, #0b0a1c 0%, #0b0a1c 30%, #62636c 70%, #62636c 100%);
+      background-repeat:no-repeat;
+      border:2px solid #0b0a1c;
+      box-shadow:0px -2px 1px rgba(#2c313e, 0.5);
+      cursor:pointer;
+    }
+    &:active::before {
+      background:linear-gradient(to bottom, #0b0a1c 0%, #0b0a1c 50%, #62636c 100%);
+    }
+  }
+}
+
 
 @media only screen and (min-width: 768px){
   .controls {
