--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -67,6 +67,8 @@ h1 {
 .popup {
   cursor: pointer;
   position: fixed;
+  display: none;
+  z-index: 5;
   top: 1rem;
   right: 1rem;
   background: var(--gameboyColor);
@@ -88,23 +90,6 @@ h1 {
 .popup:active {
   transform: translate(0.05em, 0.05em);
   box-shadow: 0.05em 0.05em;
-}
-
-.iframe-disclaimer {
-  pointer-events: none;
-  transition: 0.25s;
-  position: absolute;
-  top: auto;
-  bottom: 3rem;
-  left: 0.5rem;
-
-  opacity: 0;
-  z-index: 4;
-  box-shadow: none;
-  height: fit-content;
-  font-size: 1rem;
-
-  background: rgba(158, 216, 218, 0.56);
 }
 
 .info-banner {
