--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -76,7 +76,7 @@ h1 {
   color: #000;
   padding: 1rem 1.6rem;
   font-weight: 900;
-  font-size: 1.3rem;
+  font-size: 0.85rem;
   border: 3px solid black;
   border-radius: 0.4em;
   box-shadow: 0.1em 0.1em;
@@ -102,12 +102,12 @@ h1 {
   color: white;
   bottom: 2rem;
   letter-spacing: 4px;
-  font-size: 0.7rem;
+  font-size: 0.5rem;
   padding-right: 15px;
   text-transform: uppercase;
 
   p {
-    font-size: 1rem;
+    font-size: 0.75rem;
     font-weight: bolder;
     letter-spacing: 6px;
   }
@@ -472,6 +472,18 @@ h1 {
 @media only screen and (min-width: 768px){
   :root {
     --displayMargin: 3rem;
+  }
+
+  .popup {
+    font-size: 1.3rem;
+  }
+
+  .cube-menu {
+    font-size: 0.8rem;
+
+    p {
+      font-size: 1rem;
+    }
   }
 
   .controls {
