--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,6 +3,7 @@
   --gameboyColor: #f2ae00;
   --gameboyMaxWidth: 768px;
   --displayMargin: 1rem;
+  --infoBannerTransitionTimeInSeconds: 1s;
 }
 
 html {
@@ -124,24 +125,29 @@ h1 {
   z-index: 2;
   position: absolute;
   bottom: 0;
-  background: rgba(113, 155, 175, 0.7);
-  border-top: 0.5rem solid #2c313e;
-  border-radius: 10px;
-  font-family: monospace, sans-serif;
+  //background: rgba(113, 155, 175, 0.7);
+  //border-top: 0.5rem solid #2c313e;
+  //border-radius: 10px;
+  font-family: sans-serif;
   color: white;
-  transition: 1s;
+  transition: var(--infoBannerTransitionTimeInSeconds);
   width: 100%;
   transform: translateY(100%);
 
   .title {
-    background: rgba(113, 155, 175, 0.7);
+    text-transform: uppercase;
+    font-weight: bolder;
+    letter-spacing: 6px;
+    //background: rgba(113, 155, 175, 0.7);
     padding: 0.4rem;
-
+    margin: 0.4rem 0;
+    font-size: 0.8rem;
   }
 
   .content {
+    font-size: 0.8rem;
     padding: 0.4rem;
-
+    margin: 0.4rem 0;
   }
 }
 
@@ -206,7 +212,7 @@ h1 {
   position: relative;
   width: 100%;
   box-sizing: border-box;
-  padding: 2rem 1.5rem 3rem 1.5rem;
+  padding: 1rem 1.5rem 1rem 1.5rem;
   display: flex;
   justify-content: space-between;
   pointer-events: auto;
