--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,3 @@
-
 :root {
   --gameboyColor: #f2ae00;
   --gameboyMaxWidth: 768px;
@@ -115,9 +114,11 @@ h1 {
     font-weight: bolder;
     letter-spacing: 6px;
   }
+
   ul {
     list-style: none;
     padding: 0;
+
     li {
       margin-top: 0.35rem
     }
@@ -159,7 +160,7 @@ h1 {
   font-size: 1rem;
   display: none;
   position: absolute;
-  top:0;
+  top: 0;
   left: 0;
   z-index: 2;
   color: #0b0a1c;
@@ -174,7 +175,7 @@ h1 {
     border-bottom: 1px solid black;
   }
 
-  .content{
+  .content {
 
     h3 {
       margin-top: 2em !important;
@@ -228,7 +229,7 @@ h1 {
   font-size: 2.5rem;
   line-height: 2.5rem;
 
-  > * {
+  >* {
     width: 33%;
     height: 33%;
     position: absolute;
@@ -380,6 +381,7 @@ h1 {
   justify-content: center;
   margin-top: -3.5rem;
   width: calc(100% - var(--displayMargin)*2);
+
   svg {
     display: block;
     height: 2.5rem;
@@ -393,7 +395,8 @@ h1 {
   display: flex;
   font-family: sans-serif;
 
-  .a, .b {
+  .a,
+  .b {
     margin: 0.5rem;
 
     padding: 0;
@@ -413,7 +416,7 @@ h1 {
     -webkit-user-select: none;
     cursor: pointer;
 
-    &:active > span {
+    &:active>span {
       display: block;
       transform: translateY(3px);
     }
@@ -436,46 +439,48 @@ h1 {
 }
 
 .start-select {
-  width:100%;
-  display:flex;
-  justify-content:center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
   padding: 0;
   align-items: center;
   font-family: sans-serif;
   pointer-events: auto;
 
-  .select, .start {
-    display:inline-block;
+  .select,
+  .start {
+    display: inline-block;
     color: #2c313e;
-    text-shadow:0px -1px 0px #2c313e;
-    letter-spacing:-1px;
-    width:4rem;
-    font-size:16px;
-    text-align:center;
+    text-shadow: 0px -1px 0px #2c313e;
+    letter-spacing: -1px;
+    width: 4rem;
+    font-size: 16px;
+    text-align: center;
     margin: 1rem 0 1rem 0;
 
     &::before {
-      content:'';
-      display:block;
-      margin:0 auto;
+      content: '';
+      display: block;
+      margin: 0 auto;
       width: 2.5rem;
       height: 10px;
-      margin-bottom:5px;
-      border-radius:40%;
-      background:linear-gradient(to bottom, #0b0a1c 0%, #0b0a1c 30%, #62636c 70%, #62636c 100%);
-      background-repeat:no-repeat;
-      border:2px solid #0b0a1c;
-      box-shadow:0px -2px 1px rgba(#2c313e, 0.5);
-      cursor:pointer;
+      margin-bottom: 5px;
+      border-radius: 40%;
+      background: linear-gradient(to bottom, #0b0a1c 0%, #0b0a1c 30%, #62636c 70%, #62636c 100%);
+      background-repeat: no-repeat;
+      border: 2px solid #0b0a1c;
+      box-shadow: 0px -2px 1px rgba(#2c313e, 0.5);
+      cursor: pointer;
     }
+
     &:active::before {
-      background:linear-gradient(to bottom, #0b0a1c 0%, #0b0a1c 50%, #62636c 100%);
+      background: linear-gradient(to bottom, #0b0a1c 0%, #0b0a1c 50%, #62636c 100%);
     }
   }
 }
 
 
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 768px) {
   :root {
     --displayMargin: 3rem;
   }
@@ -495,9 +500,11 @@ h1 {
 
   .info-banner {
     margin-bottom: 0.4rem;
+
     .title {
       font-size: 1.2rem;
     }
+
     .content {
       font-size: 1rem;
     }
@@ -510,13 +517,21 @@ h1 {
 }
 
 .social {
-  margin-top: 10px;
+  position: absolute;
+  bottom: 0px;
+  right: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 15px;
+  gap: 5px;
+  z-index: 1000;
 
   div {
     cursor: pointer;
+  }
+
+  svg {
+    fill: #000;
   }
 }
