gamboy website init docker

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,12 +1,12 @@
 :root {
-  --gameboyColor: #f2ae00;
+  --gameboyColor: #8EE53F;
   --gameboyMaxWidth: 768px;
   --displayMargin: 1rem;
   --infoBannerTransitionTimeInSeconds: 1s;
 }
 
 html {
-  background: bisque;
+  background: black;
   touch-action: none;
 }
 
