--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,5 @@
 :root {
-  --gameboyColor: #8EE53F;
+  --gameboyColor: #E5D6CB;
   --gameboyMaxWidth: 768px;
   --displayMargin: 1rem;
   --infoBannerTransitionTimeInSeconds: 1s;
@@ -406,12 +406,12 @@ h1 {
     width: 3.75rem;
     height: 3.75rem;
     border-radius: 50%;
-    background-color: #2c313e;
+    background-color: #A7005B;
     border: 0;
     border-bottom: 0.25rem solid #888;
     box-shadow: -0.125rem 0.125rem 10px black, 0px 0px 0.75rem black inset;
     text-shadow: 0px -0.125rem 0.125rem #888;
-    color: #2c313e;
+    color: #A7005B;
     text-align: center;
     -webkit-user-select: none;
     cursor: pointer;
