--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -102,7 +102,7 @@ h1 {
   font-family: sans-serif;
   width: 100%;
   z-index: 6;
-  color: white;
+  color: #346856;
   bottom: 0.6rem;
   letter-spacing: 4px;
   font-size: 0.5rem;
