ico change and more content tweaks

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -130,7 +130,7 @@ h1 {
   position: absolute;
   bottom: 0;
   font-family: sans-serif;
-  color: white;
+  color: #346856;
   transition: var(--infoBannerTransitionTimeInSeconds);
   width: 100%;
   transform: translateY(100%);
